--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cordova-plugin-edgesafe",
-  "version": "1.1.0",
-  "description": "Cordova plugin: WindowInsets padding for Android edge-to-edge (SDK 35+) with optional legacy fit mode.",
+  "version": "1.2.0",
+  "description": "Cordova plugin: Android edge-to-edge safety. Default FIT (below bars), switchable to EDGE with insets.",
   "license": "MIT",
   "author": "weevi / walid",
   "homepage": "https://github.com/weevi/cordova-plugin-edgesafe",
@@ -10,8 +10,7 @@
     "android",
     "insets",
     "edge-to-edge",
-    "safe-area",
-    "windowinsets"
+    "safe-area"
   ],
   "cordova": {
     "id": "cordova-plugin-edgesafe",
