--- a/plugin.xml
+++ b/plugin.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin id="cordova-plugin-edgesafe" version="1.2.1"
+<plugin id="cordova-plugin-edgesafe" version="1.3.0"
         xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
   <name>Edge Safe</name>
-  <description>Android edge-to-edge safety for Cordova WebView. Default = FIT (below status bar / above nav). Switchable to EDGE. FIT now clears overlay flags.</description>
+  <description>Android edge-to-edge safety for Cordova WebView. Default = FIT (below bars). EDGE mode now uses layout MARGINS so fixed elements stay inside.</description>
   <license>MIT</license>
   <keywords>cordova, android, windowinsets, edge-to-edge, safe-area</keywords>
 
@@ -13,28 +13,19 @@
     <engine name="cordova-android" version=">=12.0.0" />
   </engines>
 
-  <!-- JS bridge -->
   <js-module src="www/edge-safe.js" name="EdgeSafe">
     <clobbers target="cordova.plugins.edgeSafe" />
   </js-module>
 
   <platform name="android">
-    <!-- AndroidX core for WindowCompat/ViewCompat -->
     <framework src="androidx.core:core:1.13.1" />
-
-    <!-- Register native class -->
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="EdgeSafe">
         <param name="android-package" value="com.weevi.edgesafe.EdgeSafe" />
       </feature>
     </config-file>
 
-    <!-- Plugin preferences (override in app config.xml) -->
-    <preference name="EdgeSafeMode" default="fit" /> <!-- fit | edge -->
-    <preference name="EdgeSafeApplyPadding" default="true" />
-    <preference name="EdgeSafePadTop" default="true" />
-    <preference name="EdgeSafePadBottom" default="true" />
-    <preference name="EdgeSafePadSides" default="true" />
+    <preference name="EdgeSafeMode" default="fit" />
     <preference name="EdgeSafeTransparentBars" default="false" />
     <preference name="EdgeSafeLightStatusBarIcons" default="true" />
     <preference name="EdgeSafeLightNavBarIcons" default="true" />
