--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cordova-plugin-edgesafe",
-  "version": "1.3.0",
-  "description": "Cordova plugin: Android edge-to-edge safety. Default FIT (below bars). EDGE now applies layout MARGINS so UI is never under system bars.",
+  "version": "1.4.0",
+  "description": "Cordova plugin: Android edge-to-edge safety. Default EDGE; applies IME-aware margins so viewport avoids bars & keyboard (no CSS needed).",
   "license": "MIT",
   "author": "weevi / walid",
   "homepage": "https://github.com/weevi/cordova-plugin-edgesafe",
@@ -10,7 +10,9 @@
     "android",
     "insets",
     "edge-to-edge",
-    "safe-area"
+    "safe-area",
+    "keyboard",
+    "ime"
   ],
   "cordova": {
     "id": "cordova-plugin-edgesafe",
