--- a/plugin.xml
+++ b/plugin.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin id="cordova-plugin-edgesafe" version="1.4.0"
+<plugin id="cordova-plugin-edgesafe" version="1.6.1"
         xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
   <name>Edge Safe</name>
-  <description>Android edge-to-edge safety for Cordova WebView. Default = EDGE. IME-aware: shrinks WebView using margins (no CSS needed).</description>
+  <description>Android edge-to-edge safety for Cordova WebView. Default = EDGE. IME-aware margins. Color + icon controls via simple runtime calls.</description>
   <license>MIT</license>
-  <keywords>cordova, android, windowinsets, edge-to-edge, safe-area</keywords>
+  <keywords>cordova, android, windowinsets, edge-to-edge, safe-area, keyboard, ime, statusbar, navbar</keywords>
 
   <engines>
     <engine name="cordova" version=">=11.0.0" />
     <engine name="cordova-android" version=">=12.0.0" />
   </engines>
 
+  <!-- JS bridge -->
   <js-module src="www/edge-safe.js" name="EdgeSafe">
     <clobbers target="cordova.plugins.edgeSafe" />
   </js-module>
 
   <platform name="android">
     <framework src="androidx.core:core:1.13.1" />
+
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="EdgeSafe">
         <param name="android-package" value="com.weevi.edgesafe.EdgeSafe" />
       </feature>
     </config-file>
 
-    <preference name="EdgeSafeMode" default="edge" />
+    <!-- Defaults -->
+    <preference name="EdgeSafeMode" default="edge" /> <!-- edge | fit -->
     <preference name="EdgeSafeTransparentBars" default="true" />
-    <preference name="EdgeSafeLightStatusBarIcons" default="true" />
-    <preference name="EdgeSafeLightNavBarIcons" default="true" />
+    <preference name="LightStatusBarIcons" default="true" />
+    <preference name="LightNavBarIcons" default="true" />
     <preference name="EdgeSafeForceOpaqueBars" default="false" />
+
+    <!-- Colors (UN-PREFIXED ONLY) -->
+    <preference name="StatusBarColor" default="auto" />
+    <preference name="NavBarColor" default="auto" />
+    <preference name="NavBarDividerColor" default="auto" />
 
     <source-file src="src/android/EdgeSafe.java" target-dir="src/com/weevi/edgesafe" />
   </platform>
